--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
+
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mustache.servlet.expose-request-attributes=true
