--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.generate-ddl=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.mustache.servlet.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
