add ability to add files(images) to messages / add style.css and pull it like static

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.freemarker.expose-request-attributes=true
+
+upload.path=/C:/Users/User/IdeaProjects/Twitter/uploads
