add email sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ upload.path=/C:/Users/User/IdeaProjects/Twitter/uploads
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=andrewgudzenko13@gmail.com
+spring.mail.password=pvpkvxkvdavqsgkb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+mail.debug=true
+
