--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+
 
 
     </dependencies>
