add docker, docker-compose/ add migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sweaterdb
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.generate-ddl=true
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
@@ -16,7 +16,7 @@ spring.servlet.multipart.max-request-size=5MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=andrewgudzenko13@gmail.com
-spring.mail.password=pvpkvxkvdavqsgkb
+spring.mail.password=gudvin2002A
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
