--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.16.3</version>
+        </dependency>
+
 
 
 
