remove password and add aws properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,17 +8,20 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/C:/Users/User/IdeaProjects/Twitter/uploads
-
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=andrewgudzenko13@gmail.com
-spring.mail.password=gudvin2002A
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 mail.debug=true
+
+aws.s3.bucket.name=twitter-test-bucket
+aws.accessKeyId=your_access_key_id
+aws.secretKey=your_secret_access_key
+aws.region=your_aws_region
 
