change mail password in prop/ add aws sdk dep to pom/ add twitter blue bird logo to our page/ add s3 config/ transfer logic for adding messages from controller to service/ replace local storage of images with s3/ delete uploads folder with previous images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,14 +14,14 @@ spring.servlet.multipart.max-request-size=5MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=andrewgudzenko13@gmail.com
-spring.mail.password=
+spring.mail.password=12345678
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 mail.debug=true
 
 aws.s3.bucket.name=twitter-test-bucket
-aws.accessKeyId=your_access_key_id
-aws.secretKey=your_secret_access_key
-aws.region=your_aws_region
+aws.accessKeyId=AKIA3ZLQQD6FKLYTH25M
+aws.secretKey=4EPVxDQ5E1Cu7SyhglH8avde6PAGrqLY7e5OEpGZ
+aws.region=eu-central-1
 
